# agentanvil

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/skills/pr/: SKILL.md
.claude/skills/roadmap/: SKILL.md
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: ci.yml  release.yml
docs/: record-replay-envelope.md  runner-protocol.md
scripts/: check_version_linearity.py
src/agentanvil/: __init__.py  exceptions.py
src/agentanvil/backends/: __init__.py  base.py  direct.py  types.py
src/agentanvil/backends/_providers/: __init__.py  _base.py  anthropic.py  google.py  openai.py
src/agentanvil/backends/pricing/: __init__.py  pricing.yaml
src/agentanvil/cli/: main.py
src/agentanvil/core/: __init__.py  contracts.py  models.py  report.py  run_record.py  traces.py
src/agentanvil/record_replay/: __init__.py  mock.py  recording.py
src/agentanvil/runner/: __init__.py  base.py  subprocess.py
tests/: test_contracts.py
tests/backends/: mock_backend.py  test_abc_contract.py  test_direct.py  test_types.py
tests/ci/: test_determinism.py
tests/cli/: test_main.py
tests/core/: test_run_record.py  test_traces.py
tests/fixtures/recordings/: single_agent.json
tests/fixtures/runner_agents/: echo.py  error.py  sleep.py
tests/record_replay/: test_edge_cases.py  test_mock.py  test_recording.py
tests/runner/: test_subprocess.py
